--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,10 @@
-server.port=8086
-### for localy run uncomment below line and comment mysql line
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.driverClassName=org.h2.Driver
+##server port no.###
+server.port=8080
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.h2.console.enabled=true
 
-### for running inside docker container
-spring.datasource.url = jdbc:mysql://mysql-standalone:3306/test
-#spring.datasource.hikari.initialization-fail-timeout = 0
-
-spring.datasource.username = sa
-spring.datasource.password = password
-
-# Keep the connection alive if idle for a long time (needed in production)
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
-
-# Show or not log for each sql query
-spring.jpa.show-sql = true
-
-# Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto = update
-
-# Naming strategy
-spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
